sidebar menu gap ui issues solved

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/ActionMenu/components/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/ActionMenu/components/index.scss
@@ -44,9 +44,9 @@ border-top: solid 1px #425a72;
 .sidebar .submenu {
   display: none;
   position: absolute;
-  left: 16.6%;
+  left: 16.5%;
   top: 0;
-  width: 250px;
+  width: 14%;
   background-color: #2C3E50;
   border-left: 1px solid #3d566e;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -153,6 +153,7 @@ border-top: solid 1px #425a72;
 
 .back-icon {
   font-size: 18px;
+  color: #fff !important;
 }
 
 .menu-title {
@@ -225,7 +226,7 @@ border-top: solid 1px #425a72;
 /* Nested submenu styles */
 .sidebar .submenu .submenu {
   background-color: #2C3E50;
-  left: 29.66%;
+  left:30.4%;
   top: 64px;
   border-radius: 0 4px 4px 0;
 }
